[project]
name = "derivatives-protocol-backend"
version = "0.1.0"
description = "Backend service for permissionless derivatives protocol"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core Framework
    "fastapi==0.115.2",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    # Database
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    # Blockchain & Oracle
    "web3==6.15.1",
    "pythclient==0.1.2",
    "eth-account==0.11.0",
    "eth-typing==3.5.2",
    # Background Tasks
    "celery==5.3.6",
    "redis==5.0.1",
    "APScheduler==3.10.4",
    # HTTP & Utils
    "httpx==0.26.0",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.6",
    "websockets==12.0",
    # Monitoring & Logging
    "loguru==0.7.2",
    "prometheus-client==0.19.0",
    "tenacity==9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "black==24.1.1",
    "isort==5.13.2",
    "mypy==1.8.0",
]
